# auto_reference_generator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  optional-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-portable.yml  codeql.yml  pypi-publish.yml  python-tests.yml
assets/: sample_from_dict.json
auto_reference_generator/: __init__.py  cli.py  common.py  gui.py  hash.py  referenceGen.py  referencePhysicalGen.py  reference_generator.py
auto_reference_generator/options/: options.properties
installer/: README.txt  auto_ref.cmd  install.cmd  uninstall.cmd
samples/: auto_reference_generator_AutoRef.xlsx  auto_reference_generator_AutoRef_from_json.xlsx  sample_json_dict.json
tests/: test_common.py  test_hash.py  test_reference_generator.py  test_reference_generator_integration.py  test_reference_loop_and_keywords.py
