[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_reference_generator"
version = "1.3.5"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "A tool for archivist's to automate the generation of references for digital files"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["archiving","archives","digital archiving","references","automatic archival reference generator"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies=["pandas","openpyxl", "tqdm"]

[project.optional-dependencies]
addex = ["lxml","odfpy"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/CPJPRINCE/auto_reference_generator"
Issues = "https://github.com/CPJPRINCE/auto_reference_generator/issues"
[project.scripts]
auto_ref = "auto_reference_generator.cli:run_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['auto_reference_generator']
exclude = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]